--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dviaplayer.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/3dviaplayer.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -38,7 +38,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\INSERTABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Both" valueKind="String" />
@@ -49,7 +49,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\ENABLEFULLPAGE\.VMO"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx, 107"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx, 107"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D4323BF2-006A-4440-A2F5-27E3E7AB25F8}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -82,7 +82,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\PROGRAMMABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Both" valueKind="String" />
@@ -97,7 +97,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\INSERTABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx, 107"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx, 107"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C4925E65-7A1E-11D2-8BB4-00A0C9CC72C3}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -149,7 +149,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\VIRTOOLSPLAYER"
                         valueName="EDITFLAGS" value="0" valueKind="DWord" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\VIRTOOLSPLAYER\DEFAULTICON"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx,0"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx,0"
                         valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\VIRTOOLSPLAYER\SHELL"
                         valueName="" />
@@ -165,10 +165,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{811C9B8E-54B4-4245-A746-C4C82BEFA3A8}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{811C9B8E-54B4-4245-A746-C4C82BEFA3A8}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer\WebPlayer.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{811C9B8E-54B4-4245-A746-C4C82BEFA3A8}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\BrowserPlugins\3DVIAPlayer"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\BrowserPlugins\3DVIAPlayer"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{6E1FCD1C-6E40-40BB-998E-01A678893BD6}"
                         valueName="" value="IWebPlayer" valueKind="String" />
