--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.astoundlauncher.astoundlauncher.ocx.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.astoundlauncher.astoundlauncher.ocx.config
@@ -14,7 +14,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CDF6E489-962E-4F72-808E-F14E23266B8E}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CDF6E489-962E-4F72-808E-F14E23266B8E}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\AstoundLauncher\AstoundLauncher.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstoundLauncher\AstoundLauncher.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CDF6E489-962E-4F72-808E-F14E23266B8E}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
@@ -41,7 +41,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8B516D4B-789B-45B4-A609-F731E135FAAF}"
                         valueName="" value="AstoundLauncher Property Page" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8B516D4B-789B-45B4-A609-F731E135FAAF}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTOUN~1\ASTOUN~1.OCX"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstoundLauncher\AstoundLauncher.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C86FF4B0-AA1D-46D4-8612-025FB86583C7}"
                         valueName="" value="AstoundLauncher Control" valueKind="String" />
@@ -54,10 +54,10 @@
                         valueName="" value="ASTOUNDLAUNCHER.AstoundLauncherCtrl.1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C86FF4B0-AA1D-46D4-8612-025FB86583C7}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTOUN~1\ASTOUN~1.OCX"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstoundLauncher\AstoundLauncher.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C86FF4B0-AA1D-46D4-8612-025FB86583C7}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTOUN~1\ASTOUN~1.OCX, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstoundLauncher\AstoundLauncher.ocx, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{C86FF4B0-AA1D-46D4-8612-025FB86583C7}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
