--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.astroavenger2loader.astroavenger2loader.ocx.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.astroavenger2loader.astroavenger2loader.ocx.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -15,10 +15,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{63C1D14E-8DF7-4855-BDBE-E03FC8731408}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{63C1D14E-8DF7-4855-BDBE-E03FC8731408}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\AstroAvenger2Loader\AstroAvenger2Loader.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstroAvenger2Loader\AstroAvenger2Loader.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{63C1D14E-8DF7-4855-BDBE-E03FC8731408}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\AstroAvenger2Loader"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstroAvenger2Loader"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{88796C54-728E-434D-A145-475A368C8090}"
                         valueName="" value="_DAstroAvengerLoader" valueKind="String" />
@@ -43,7 +43,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{154E8A9F-43B2-4889-9A69-70881581E963}"
                         valueName="" value="AstroAvengerLoader Property Page" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{154E8A9F-43B2-4889-9A69-70881581E963}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTROA~1\ASTROA~1.OCX"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstroAvenger2Loader\AstroAvenger2Loader.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D441AB53-A39C-42AE-AB79-3C05B7298F34}"
                         valueName="" value="AstroAvengerLoader Control" valueKind="String" />
@@ -56,10 +56,10 @@
                         valueName="" value="ASTROAVENGERLOADER.AstroAvengerLoaderCtrl.1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D441AB53-A39C-42AE-AB79-3C05B7298F34}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTROA~1\ASTROA~1.OCX"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstroAvenger2Loader\AstroAvenger2Loader.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D441AB53-A39C-42AE-AB79-3C05B7298F34}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ASTROA~1\ASTROA~1.OCX, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\AstroAvenger2Loader\AstroAvenger2Loader.ocx, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D441AB53-A39C-42AE-AB79-3C05B7298F34}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
