--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.atomaders.atomaders.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -30,14 +30,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="AtlAtomaderCtl.AtlAtomaderCtlAttrib" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Atomaders\Atomaders.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Atomaders\Atomaders.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Atomaders\Atomaders.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Atomaders\Atomaders.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{64D01C7F-810D-446E-A07E-456764235644}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -55,10 +55,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Atomaders\Atomaders.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Atomaders\Atomaders.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D96DDFD0-1924-11D3-ABE2-00C04F797AB7}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Atomaders\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Atomaders\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D61AF69C-AAF7-4FBB-823A-F55CCB2857A2}"
                         valueName="" value="IAtomaderCtrl" valueKind="String" />
