--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.cinematycoon.gpcontrol.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.cinematycoon.gpcontrol.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -28,14 +28,14 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\PROGRAMMABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\cinematycoon\gpcontrol.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\cinematycoon\gpcontrol.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\cinematycoon\gpcontrol.dll, 101"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\cinematycoon\gpcontrol.dll, 101"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D77EF652-9A6B-40C8-A4B9-1C0697C6CF41}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -60,10 +60,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{03C04F41-9D02-438C-B30C-329A341D1247}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{03C04F41-9D02-438C-B30C-329A341D1247}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\cinematycoon\gpcontrol.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\cinematycoon\gpcontrol.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{03C04F41-9D02-438C-B30C-329A341D1247}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\cinematycoon\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\cinematycoon\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{D691741F-29EE-40D4-B67D-B9A82271AE8A}"
                         valueName="" value="_ITGamesOnlineCtrlEvents" valueKind="String" />
