--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.ddfotg.ddfotg.1.0.0.33.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.ddfotg.ddfotg.1.0.0.33.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -26,14 +26,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstddfotgControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ddfotg\ddfotg.1.0.0.33.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ddfotg\ddfotg.1.0.0.33.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ddfotg\ddfotg.1.0.0.33.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ddfotg\ddfotg.1.0.0.33.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAE1D8DF-0B35-47E3-A1E7-EEB3FF2ECD19}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -53,10 +53,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1C901D93-0A8F-4396-AA9D-96971573A305}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1C901D93-0A8F-4396-AA9D-96971573A305}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ddfotg\ddfotg.1.0.0.33.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ddfotg\ddfotg.1.0.0.33.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{1C901D93-0A8F-4396-AA9D-96971573A305}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ddfotg\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ddfotg\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{2DE9CD38-9317-4858-96CD-5D36F5BF3740}"
                         valueName="" value="IPlayFirstddfotgControl" valueKind="String" />
