--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.diaperdash.diaperdashweb.1.0.0.4.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.diaperdash.diaperdashweb.1.0.0.4.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstDiaperDashControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{2D168880-539F-4967-BA11-F7C2862B9E1D}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{00B83F1B-C13D-48C6-A9E8-DC20FB9770F1}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{00B83F1B-C13D-48C6-A9E8-DC20FB9770F1}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\diaperdash\DiaperDashWeb.1.0.0.4.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{00B83F1B-C13D-48C6-A9E8-DC20FB9770F1}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
