--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.fitness.fitnessdashweb.1.0.0.11.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.fitness.fitnessdashweb.1.0.0.11.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstFitnessDasControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{26E6B759-DEEB-42A1-A21C-78CD29098411}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\fitness\FitnessDashWeb.1.0.0.11.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0524B6CF-5847-4AB6-A746-1ACFDD084655}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
