--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.gamehouseplayer.ghgamesplayer.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.gamehouseplayer.ghgamesplayer.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -28,14 +28,14 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\PROGRAMMABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\gamehouseplayer\GHGamesPlayer.dll, 101"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll, 101"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{74E4A24D-5224-4F05-8A41-99445E0FC22B}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -53,10 +53,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\gamehouseplayer\GHGamesPlayer.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{69646C39-01BA-4AA4-A947-D9FC39D8A35F}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\gamehouseplayer\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\gamehouseplayer\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B4100D79-B762-4B90-ACFA-5FC043C822A5}"
                         valueName="" value="_IZylomGamesPlayerCtrlEvents" valueKind="String" />
