--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.genimowebgamescontrol.genimowebgamescontrol.ocx.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.genimowebgamescontrol.genimowebgamescontrol.ocx.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -15,10 +15,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{52595273-C794-40CC-99FA-55E3E2F781A3}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{52595273-C794-40CC-99FA-55E3E2F781A3}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\GenimoWebGamesControl\GenimoWebGamesControl.ocx"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\GenimoWebGamesControl\GenimoWebGamesControl.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{52595273-C794-40CC-99FA-55E3E2F781A3}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\GenimoWebGamesControl"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\GenimoWebGamesControl"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B5759827-8ADD-45D3-A36C-294BAAFCC0F7}"
                         valueName="" value="_DGenimoWebGamesControl" valueKind="String" />
@@ -50,10 +50,10 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8ADC4409-4FBF-4224-B73F-2392C721BCB4}\PROGID"
                         valueName="" value="Genimo.WebGamesControl.6" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8ADC4409-4FBF-4224-B73F-2392C721BCB4}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\GENIMO~1\GENIMO~1.OCX"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\GenimoWebGamesControl\GenimoWebGamesControl.ocx"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8ADC4409-4FBF-4224-B73F-2392C721BCB4}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\GENIMO~1\GENIMO~1.OCX, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\GenimoWebGamesControl\GenimoWebGamesControl.ocx, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{8ADC4409-4FBF-4224-B73F-2392C721BCB4}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
