--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.greatchocolatechaseweb.1.0.0.12.greatchocolatechaseweb.1.0.0.12.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.greatchocolatechaseweb.1.0.0.12.greatchocolatechaseweb.1.0.0.12.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstGreatChocoControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6C7CAD20-85AA-475A-AC0D-303C4A9A69CE}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\greatchocolatechaseweb.1.0.0.12\GreatChocolateChaseWeb.1.0.0.12.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{CCA112AE-25CE-494E-8C12-D2585EABB902}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
