--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.hlglauncher.hlglauncherx.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.hlglauncher.hlglauncherx.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -14,10 +14,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{9972AF1F-E499-4EC3-84B3-72220846B926}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{9972AF1F-E499-4EC3-84B3-72220846B926}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\HLGLauncher\HLGLauncherX.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\HLGLauncher\HLGLauncherX.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{9972AF1F-E499-4EC3-84B3-72220846B926}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\HLGLauncher\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\HLGLauncher\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B45AB898-0147-4A9F-B7CA-38D5A8D26395}"
                         valueName="" value="ILHGLauncherXForm" valueKind="String" />
@@ -42,7 +42,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}"
                         valueName="" value="LHGLauncherXForm Control" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\HLGLAU~1\HLGLAU~1.DLL"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\HLGLauncher\HLGLauncherX.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}\MISCSTATUS\1"
                         valueName="" value="205201" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\HLGLauncher\HLGLauncherX.dll,1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\HLGLauncher\HLGLauncherX.dll,1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{B0FB831D-17F6-4CBD-9B5D-3305881D362E}\CONTROL"
                         valueName="" value="" valueKind="String" />
