--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mahjongroadshow.mahjongroadshow.1.0.0.17.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mahjongroadshow.mahjongroadshow.1.0.0.17.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstMahjongRoaControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F46BD8B1-DE4C-4A4F-B6F6-8FB68D25342D}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8068E2A1-D948-4093-AC66-6E7DCB76D04A}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8068E2A1-D948-4093-AC66-6E7DCB76D04A}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MahjongRoadshow\MahjongRoadshow.1.0.0.17.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{8068E2A1-D948-4093-AC66-6E7DCB76D04A}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
