--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mysteryofsharkisland.msi.1.0.0.8.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mysteryofsharkisland.msi.1.0.0.8.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -33,14 +33,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstmsiControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{226ACC34-3194-40E2-9AE8-834FCFE9E80D}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -61,10 +61,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MysteryOfSharkIsland\msi.1.0.0.8.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{82530560-6E35-439E-ABC4-59F0A5E32B51}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MysteryOfSharkIsland\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MysteryOfSharkIsland\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{FBDD51AF-CD1C-466D-8FE5-8AE0EE615B03}"
                         valueName="" value="IPlayFirstmsiControl" valueKind="String" />
