--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.orbitallauncher-2.0.15.orbitallauncher.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.orbitallauncher-2.0.15.orbitallauncher.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -10,7 +10,7 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}"
                         valueName="" value="Orbital Launcher" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{E03EEB49-B0CB-46A3-A84B-BA758243A7B0}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
@@ -20,7 +20,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\OrbitalLauncher-2.0.15\OrbitalLauncher.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{651D63A0-699F-4859-93E5-08CD1F48CABD}\1.0\FLAGS"
                         valueName="" value="0" valueKind="String" />
