--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.parkingdash.parkingdashweb.1.0.0.10.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.parkingdash.parkingdashweb.1.0.0.10.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstParkingDasControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{F135A813-7152-4532-AC8D-28AC2136DFC7}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,7 +63,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\parkingdash\ParkingDashWeb.1.0.0.10.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{0C115FF2-4E22-4E3F-B57A-C8ACC860220B}\1.0\HELPDIR"
                         valueName="" value="" valueKind="String" />
