--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.raptisoftgameloader.rsgameloader.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -29,14 +29,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="RSGameLoader.RSGameLoaderCtrl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\raptisoftgameloader\RSGameLoader.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\raptisoftgameloader\RSGameLoader.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{6908B1F5-B9EF-40D9-B92D-46B12FC2EC65}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -56,10 +56,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\raptisoftgameloader\RSGameLoader.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\raptisoftgameloader\RSGameLoader.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{6475AF0E-D4C5-41A2-BBD6-FA9AF7B96F47}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\raptisoftgameloader\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\raptisoftgameloader\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{CFC863D9-C682-49F9-8EC4-8090907AC8FA}"
                         valueName="" value="IRSGameLoaderCtrl" valueKind="String" />
