--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.reflexivewebgameloader.reflexivewebgameloader.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.reflexivewebgameloader.reflexivewebgameloader.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -31,7 +31,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\PROGRAMMABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
@@ -40,7 +40,7 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\INSERTABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll, 101"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll, 101"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{3FE16C08-D6A7-4133-84FC-D5BFB4F7D886}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -59,10 +59,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ReflexiveWebGameLoader\ReflexiveWebGameLoader.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{B46171CA-E318-4323-8394-3FD32C70C9EE}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ReflexiveWebGameLoader\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ReflexiveWebGameLoader\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{EAFAE8F1-AC62-47A4-91A4-21020ED1DA86}"
                         valueName="" value="IWebGameLoaderEvents" valueKind="String" />
