--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sandscript.sandscript.1.0.0.21.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sandscript.sandscript.1.0.0.21.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -28,14 +28,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstSandScriptControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\sandscript\SandScript.1.0.0.21.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\sandscript\SandScript.1.0.0.21.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\sandscript\SandScript.1.0.0.21.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\sandscript\SandScript.1.0.0.21.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{D410AFBD-4E26-4D5F-840F-0412D6F6BB8D}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -55,10 +55,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D3B1CDDF-30E1-4DFD-A77A-23B7D40A12B6}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D3B1CDDF-30E1-4DFD-A77A-23B7D40A12B6}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\sandscript\SandScript.1.0.0.21.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\sandscript\SandScript.1.0.0.21.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{D3B1CDDF-30E1-4DFD-A77A-23B7D40A12B6}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\sandscript\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\sandscript\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{56FDDC5A-2DD1-4E40-A003-1E5FF50DAD30}"
                         valueName="" value="IPlayFirstSandScriptControl" valueKind="String" />
