--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sweetopia.1.0.0.22.sweetopia.1.0.0.22.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.sweetopia.1.0.0.22.sweetopia.1.0.0.22.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -26,14 +26,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstSweetopiaControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{FC4CAF5F-91BD-4DD9-ADC1-F3C737E37BC4}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -53,10 +53,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Sweetopia.1.0.0.22\Sweetopia.1.0.0.22.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{590539A5-E2AA-4244-A04C-DBD7805E317F}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\Sweetopia.1.0.0.22\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\Sweetopia.1.0.0.22\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{9B921314-7401-485F-A9AB-99D8280DE969}"
                         valueName="" value="IPlayFirstSweetopiaControl" valueKind="String" />
