--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.tastyplanet.1.0.0.4.tastyplanet.1.0.0.4.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.tastyplanet.1.0.0.4.tastyplanet.1.0.0.4.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -35,14 +35,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirsttastyplanetControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{1CDFA4E8-3396-439D-8C9D-AD0E32DE94B6}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -63,10 +63,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\tastyplanet.1.0.0.4\tastyplanet.1.0.0.4.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{EFE62716-7828-4CB8-A5FD-812832CCF948}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\tastyplanet.1.0.0.4\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\tastyplanet.1.0.0.4\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{C7C6AD87-546C-446A-B833-45F528922D12}"
                         valueName="" value="IPlayFirsttastyplanetControl" valueKind="String" />
