--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zenerchiweb.1.0.0.10.zenerchi.1.0.0.10.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zenerchiweb.1.0.0.10.zenerchi.1.0.0.10.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -33,14 +33,14 @@
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\VERSIONINDEPENDENTPROGID"
                         valueName="" value="activex.PlayFirstzenerchiControl" valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BAC761D3-DFFD-4DB4-A01D-173346E090A7}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -61,10 +61,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZenerchiWeb.1.0.0.10\zenerchi.1.0.0.10.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{5AC74EDA-8E82-4F9D-A0CA-3CF38CA16F64}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZenerchiWeb.1.0.0.10\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZenerchiWeb.1.0.0.10\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{B617B3A8-2FB0-4C2E-A236-B4A4AF54B3FB}"
                         valueName="" value="IPlayFirstzenerchiControl" valueKind="String" />
