--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zylomgamesplayer.zylomgamesplayer.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.zylomgamesplayer.zylomgamesplayer.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -31,14 +31,14 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\PROGRAMMABLE"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="Apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll, 101"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll, 101"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{BFF1950D-B1B4-4AE8-B842-B2CCF06D9A1B}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -56,10 +56,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{3A28328F-AE4E-4D8B-8504-8AB41C0F490C}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{3A28328F-AE4E-4D8B-8504-8AB41C0F490C}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZylomGamesPlayer\zylomgamesplayer.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{3A28328F-AE4E-4D8B-8504-8AB41C0F490C}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\ZylomGamesPlayer\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\ZylomGamesPlayer\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{22776D5A-DA6D-4E16-BC84-ED164D165CC6}"
                         valueName="" value="_IZylomGamesPlayerCtrlEvents" valueKind="String" />
