--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mythicmarbles.mythicmarbles.1.0.0.2.dll.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/activex.mythicmarbles.mythicmarbles.1.0.0.2.dll.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+        <section name="flashpointSecurePlayer" type="FlashpointSecurePlayer.Shared+FlashpointSecurePlayerSection, FlashpointSecurePlayer, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null" />
     </configSections>
     <flashpointSecurePlayer>
         <modifications>
@@ -39,14 +39,14 @@
                         valueName="" value="activex.PlayFirstMythicMarblesControl"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{38A5F6F0-0B64-421B-A553-3D49A76ECDCD}\INPROCSERVER32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{38A5F6F0-0B64-421B-A553-3D49A76ECDCD}\INPROCSERVER32"
                         valueName="THREADINGMODEL" value="apartment" valueKind="String" />
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{38A5F6F0-0B64-421B-A553-3D49A76ECDCD}\CONTROL"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{38A5F6F0-0B64-421B-A553-3D49A76ECDCD}\TOOLBOXBITMAP32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll, 1"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll, 1"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\CLSID\{38A5F6F0-0B64-421B-A553-3D49A76ECDCD}\MISCSTATUS"
                         valueName="" value="0" valueKind="String" />
@@ -67,10 +67,10 @@
                     <registryBackup type="KEY" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{2F24B683-762D-4F87-892B-4022D808ED73}\1.0\0"
                         valueName="" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{2F24B683-762D-4F87-892B-4022D808ED73}\1.0\0\WIN32"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MythicMarbles\MythicMarbles.1.0.0.2.dll"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{2F24B683-762D-4F87-892B-4022D808ED73}\1.0\HELPDIR"
-                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\\ActiveX\MythicMarbles\"
+                        valueName="" value="%FLASHPOINTSECUREPLAYERSTARTUPPATH%\ActiveX\MythicMarbles\"
                         valueKind="String" />
                     <registryBackup type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\INTERFACE\{1D101C2A-F6B6-4AD8-9687-0592729F7532}"
                         valueName="" value="IPlayFirstMythicMarblesControl" valueKind="String" />
