--- a/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayer.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>FlashpointSecurePlayer.cs</DependentUpon>
     </Compile>
     <Compile Include="Modifications.cs" />
+    <Compile Include="ProgressManager.cs" />
     <Compile Include="RunAsAdministrator.cs" />
     <Compile Include="SingleInstance.cs" />
     <Compile Include="ProcessSync.cs" />
